--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -50,6 +50,6 @@ cask "google-japanese-ime"
 cask "notion"
 cask "tableplus"
 cask "visual-studio-code"
-cast "raycast"
+cask "raycast"
 cask "iterm2"
 cask "karabiner-elements"
