--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -43,6 +43,7 @@ brew "tidy-html5"
 brew "tree"
 brew "yarn"
 brew "zsh"
+brew "zsh-autosuggestions"
 cask "1password"
 cask "cursor"
 cask "docker"
